--- a/teaching.html
+++ b/teaching.html
@@ -33,21 +33,22 @@
 <h2>Teaching Experience</h2>
 
 <ul>
-<li><p><b><a href="">Mini MBA, McGill University Executive Institute - 2020 & 2021 </a></b><br />
-Marketing modules for Integrated Management Thinking and Executive Development Course (co-taught with Carl Boutet)
+<li><p><b><a href="">Mini MBA, McGill University Executive Institute - 2020-2022 </a></b><br />
+Marketing modules for Integrated Management Thinking and Executive Development Course<br />
+AI and Data Analytics module for Advanced Management Course
 </p>
 </li>
 </ul>
   
 <ul>
-<li><p><b><a href="">Operations Management - McGill University - 2020 & 2021 </a></b><br />
+<li><p><b><a href="">Operations Management - McGill University - 2020-2022 </a></b><br />
 Undergraduate core course (2 sections of 65 students each year). Evaluations: 4.9, 4.6, 4.8, 4.9  (out of 5)
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><b><a href="">Revenue Management - McGill University - 2020 & 2021 </a></b><br />
+<li><p><b><a href="">Revenue Management - McGill University - 2020-2022 </a></b><br />
 Elective course for Master of Management in Analytics. Evaluations: 5, 5 (out of 5)
 </p>
 </li>
