--- a/news.html
+++ b/news.html
@@ -34,7 +34,7 @@
 
 <li><p><a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">U.S. ‘Opportunity Zones’ Use Tax Breaks for Developers to Help Poor Neighbourhoods — But Are They Choosing Wisely?</a> The Conversation, August 2021</p> 
     
-<li><p><a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">Podcast - Start-Up Nation Voices</a> August 2021</p>
+<li><p><a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">Podcast - Start-Up Nation Voices,</a> August 2021</p>
   
 <li><p><a href="https://ccentral.ca/future-convenience-stores?utm_source=omeda&utm_medium=email&utm_campaign=NL_Ccentral_REG&utm_keyword=&oly_enc_id=">The Future of Convenience Stores,</a> Canada Convenience Store News, May 2021</p> 
     
