--- a/research.html
+++ b/research.html
@@ -251,7 +251,7 @@ Finalist in the 2021 <b>M&SOM Practice-Based Research Competition</b> <br />
 </ol>
 
 <ol start="21">
-<li><p><a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">U.S. Opportunity Zones Use Tax Breaks for Developers to Help Poor Neighbourhoods — But Are They Choosing Wisely?</a> with R. Bekkerman, J. Maiden, and D. Mitrofanov, Published in <b>The Conversation, <a href="https://nationalpost.com/pmn/news-pmn/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely">National Post</a>, and and <a href="https://ca.news.yahoo.com/u-opportunity-zones-tax-breaks-155233959.html">Yahoo News</a>,</b> 2021
+<li><p><a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">U.S. Opportunity Zones Use Tax Breaks for Developers to Help Poor Neighbourhoods — But Are They Choosing Wisely?</a> with R. Bekkerman, J. Maiden, and D. Mitrofanov, Published in <b>The Conversation, <a href="https://nationalpost.com/pmn/news-pmn/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely">National Post</a>, and <a href="https://ca.news.yahoo.com/u-opportunity-zones-tax-breaks-155233959.html">Yahoo News</a>,</b> 2021
 </div>
 </p>
 </li>
