--- a/research.html
+++ b/research.html
@@ -237,7 +237,7 @@ Finalist in the 2021 <b>M&SOM Practice-Based Research Competition</b> <br />
 </ol>
 
 <ol start="19">
-<li><p><a href="">"How In-Store Tech Will Transform Retail"</a> with S. Zhu and S. Ray, <b>MIT Sloan Management Review</b>, 2021 <br />
+<li><p><a href="https://sloanreview.mit.edu/article/how-in-store-tech-will-transform-retail/">"How In-Store Tech Will Transform Retail"</a> with S. Zhu and S. Ray, <b>MIT Sloan Management Review</b>, 2021 <br />
 </div>
 </p>
 </li>
