--- a/research.html
+++ b/research.html
@@ -234,6 +234,7 @@ Finalist in the 2021 M&SOM Practice-Based Research Competition <br />
 <li><p><a href="https://maxccohen.github.io/Pricing-Fairness.pdf">"Price Discrimination with Fairness Constraints,"</a> with A. N. Elmachtoub and X. Lei, <b>Management Science</b>, 68(12):8536-8552, 2022 <br />
 [<a href="https://github.com/leixiao32229/PDFC">Code</a>] [<a href="https://services.informs.org/dataset/mnsc/download.php?doi=mnsc.2022.4317">Replication Files</a>] <br />
 <a href="https://maxccohen.github.io/Pricing-Fairness-Appendix.pdf">Online Appendix</a> <br />
+<a href="https://www.informs.org/Blogs/ManSci-Blogs/Management-Science-Review/Pricing-with-Fairness">Management Science Review</a> <br />
 Accepted to the 2021 </i>ACM Conference on Fairness, Accountability, and Transparency</i> and to the 2020 Workshop on Mechanism Design for Social Good <br />
 </div>
 </p>
