--- a/research.html
+++ b/research.html
@@ -345,7 +345,7 @@ Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </ol>
 
 <ol start="31">
-<li><p><a href="https://maxccohen.github.io/Conflict-Analytics-MBR.pdf">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, <b>Management and Business Review</b>, 2(2):86-93, Spring 2022 <br />
+<li><p><a href="https://maxccohen.github.io/Conflict-Analytics-MBR.pdf">"Conflict Analytics: When Data Science Meets Dispute Resolution,"</a> with S. Dahan and C. Rule, <b>Management and Business Review</b>, 2(2):86-93, Spring 2022 Issue <br />
 </div>
 </p>
 </li>
