--- a/students.html
+++ b/students.html
@@ -48,15 +48,15 @@
 
 <li><p>Xiao Lei (2022) - IEOR Ph.D. student at Columbia University (advisor: Adam Elmachtoub). First position: Assistant Professor at University of Hong Kong, HKU Business School</p>
   
+<li><p>Hajime Shimao (2023) - Postdoctoral fellow at McGill (co-advisor with Warut Khern-am-nuai). First position: Assistant Professor of Data Analytics at Penn State University, Engineering Division</p>
+
+<li><p>Banafsheh Asadi (2023) - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
+  
 <li><p>Zahra Jalali - OM Ph.D. student at McGill Desautels (co-advisor with Mehmet Gumus)</p>
   
 <li><p>Sandeep Chitla - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula)</p>
   
 <li><p>Nymisha Bandi - OM Ph.D. student at McGill Desautels (co-advisor with Saibal Ray)</p>
-  
-<li><p>Hajime Shimao - Postdoctoral fellow at McGill (co-advisor with Warut Khern-am-nuai)</p>
-
-<li><p>Banafsheh Asadi - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
   
 <li><p>Florian Golemo - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
   
